--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,7 @@ dependencies {
     compileOnly group: "org.projectlombok", name: 'lombok', version: '1.18.12'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.50.Final'
 }
 
