--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,9 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile group: "io.netty", name: "netty-all", version: '4.1.50.Final'
+dependencies {  
+    compile "com.linecorp.armeria:armeria:0.99.6"
+
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 
