--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,11 @@ repositories {
 }
 
 dependencies {
-    compile group: "io.netty", name: "netty-all", version: '4.1.50.Final'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    compile "com.linecorp.armeria:armeria:0.99.6"
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'org.slf4j:log4j-over-slf4j:1.7.30'
 
     compileOnly group: "org.projectlombok", name: 'lombok', version: '1.18.12'
-
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
-    compile group: 'io.netty', name: 'netty-all', version: '4.1.50.Final'
 }
 
